<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/comment_itemListFeed"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_selection"
                android:padding="@dimen/phone_padding">
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/comment_ivAvatar"
            android:background="@drawable/comment_avatar"
            android:contentDescription="@string/imageview_description"
            />

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/comment_ivAvatar"
            android:layout_toRightOf="@id/comment_ivAvatar"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/phone_margin"
            >
        <TextView
                android:id="@+id/comment_tvAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_tittle_singer"
                android:textStyle="bold"
                android:textSize="@dimen/phone_text_header_size"
                android:textColor="@color/Black"/>
        <TextView
                android:id="@+id/comment_tvComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment_form"
                android:textSize="@dimen/phone_text_sub_info_size"
                android:layout_below="@id/comment_tvAccount"/>
        <TextView
                android:id="@+id/comment_tvTimeComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment_time"
                android:textSize="@dimen/phone_text_info_care_size"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/comment_tvAccount"/>
    </RelativeLayout>
</RelativeLayout>