<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/phone_line_size"
            android:background="@color/White"
            />
    <Button
            android:id="@+id/dialog_btTakePicture"
            android:layout_width="@dimen/phone_dialog_width_button_size"
            android:layout_height="@dimen/phone_dialog_height_button_size"
            android:background="@drawable/button_background"
            android:textColor="@color/White"
            android:text="@string/take_picture"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/phone_margin"
            />
    <Button
            android:id="@+id/dialog_btChoosePicture"
            android:layout_width="@dimen/phone_dialog_width_button_size"
            android:layout_height="@dimen/phone_dialog_height_button_size"
            android:background="@drawable/button_background"
            android:textColor="@color/White"
            android:text="@string/choose_picture"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/phone_margin"
            />
    <Button
            android:id="@+id/dialog_btCancel"
            android:layout_width="@dimen/phone_dialog_width_button_size"
            android:layout_height="@dimen/phone_dialog_height_button_size"
            android:background="@drawable/button_background"
            android:textColor="@color/White"
            android:text="@string/dialog_cancel"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/phone_margin"
            android:layout_marginBottom="@dimen/phone_margin"
            />
</LinearLayout>