<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/profile_svScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/White">

        <RelativeLayout
                android:id="@+id/profile_rlMenuBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menubar">
            <Button android:id="@+id/profile_btSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/profile_save"
                    android:layout_alignParentRight="true" android:layout_marginRight="@dimen/phone_margin"
                    android:layout_centerVertical="true"
                    />
            <TextView android:id="@+id/profile_tvProfile"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/profile_tittle"
                      android:textStyle="bold"
                      android:textColor="@color/White"
                      android:layout_centerHorizontal="true"
                      android:layout_centerVertical="true"
                    />
            <Button android:id="@+id/profile_btMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/menu"
                    android:layout_alignParentLeft="true" android:layout_marginLeft="@dimen/phone_margin"
                    android:layout_centerVertical="true"
                    />
        </RelativeLayout>
        <RelativeLayout
                android:id="@+id/profile_rlImageCover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/profile_cover"
                android:paddingBottom="@dimen/phone_margin">

            <ImageView
                    android:id="@+id/profile_ivAvatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/profile_avatar"
                    android:layout_margin="@dimen/phone_margin"/>
            <ImageView
                    android:id="@+id/profile_ivIconCover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/profile_icon"
                    android:layout_alignParentRight="true" android:layout_marginRight="@dimen/phone_margin"
                    android:layout_alignBottom="@id/profile_ivAvatar"/>
            <ImageView
                    android:id="@+id/profile_ivTextCover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/profile_text_cover"
                    android:layout_toLeftOf="@id/profile_ivIconCover"
                    android:layout_marginRight="@dimen/phone_margin"
                    android:layout_alignBottom="@id/profile_ivAvatar"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/profile_tvProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    android:textStyle="bold"
                    android:textSize="@dimen/phone_text_size"
                    android:textColor="@color/Black"
                    android:layout_marginLeft="@dimen/phone_margin"
                    android:layout_marginTop="@dimen/phone_margin"/>
            <RelativeLayout
                    android:id="@+id/profile_rlProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profile_tvProfile"
                    android:layout_margin="@dimen/phone_margin"
                    android:background="@drawable/profile_profile">

                <TextView
                        android:id="@+id/profile_tvProfileName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_display_name"
                        android:textStyle="bold"
                        android:textColor="@color/Black"
                        android:textSize="@dimen/phone_text_size"
                        android:layout_marginLeft="@dimen/phone_margin"
                        android:layout_centerVertical="true"/>
                <EditText
                        android:id="@+id/profile_etProfileName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_name_hint"
                        android:singleLine="true"
                        android:layout_toRightOf="@id/profile_tvProfileName"
                        android:layout_margin="@dimen/phone_margin_component"
                        android:layout_centerVertical="true"
                        android:background="@color/NULL"/>
            </RelativeLayout>

            <TextView
                    android:id="@+id/profile_tvAccountInfor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_infor"
                    android:textStyle="bold"
                    android:textSize="@dimen/phone_text_size"
                    android:textColor="@color/Black"
                    android:layout_below="@id/profile_rlProfile"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/phone_margin"/>
            <RelativeLayout
                    android:id="@+id/profile_rlAccountInfor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profile_tvAccountInfor"
                    android:layout_margin="@dimen/phone_margin"
                    android:paddingBottom="@dimen/phone_margin"
                    android:background="@drawable/profile_description">
                <TextView
                        android:id="@+id/profile_tvFullName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_fullname"
                        android:textStyle="bold"
                        android:textSize="@dimen/phone_text_size"
                        android:textColor="@color/Black"
                        android:layout_below="@id/profile_tvAccountInfor"
                        android:layout_marginLeft="@dimen/phone_margin"
                        android:layout_marginTop="@dimen/phone_margin"
                        />
                <EditText
                        android:id="@+id/profile_etFullName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/full_name_hint"
                        android:singleLine="true"
                        android:layout_margin="@dimen/phone_margin"
                        android:layout_toRightOf="@id/profile_tvFullName"
                        android:background="@color/NULL"
                        />
                <View
                        android:id="@+id/v1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/phone_line_size"
                        android:layout_below="@id/profile_tvFullName"
                        android:layout_margin="@dimen/phone_margin"
                        android:background="@color/Black"
                        />

                <TextView
                        android:id="@+id/profile_tvPhoneNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_phoneno"
                        android:textStyle="bold"
                        android:textSize="@dimen/phone_text_size"
                        android:textColor="@color/Black"
                        android:layout_below="@id/v1"
                        android:layout_marginLeft="@dimen/phone_margin"
                        />
                <EditText
                        android:id="@+id/profile_etPhoneNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_no_hint"
                        android:singleLine="true"
                        android:layout_below="@id/v1"
                        android:layout_alignLeft="@id/profile_etFullName"
                        android:background="@color/NULL"
                        />
                <View
                        android:id="@+id/v2"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/phone_line_size"
                        android:layout_below="@id/profile_tvPhoneNo"
                        android:layout_margin="@dimen/phone_margin"
                        android:background="@color/Black"
                        />
                <TextView
                        android:id="@+id/profile_tvBirthday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_birthday"
                        android:textStyle="bold"
                        android:textSize="@dimen/phone_text_size"
                        android:textColor="@color/Black"
                        android:layout_below="@id/v2"
                        android:layout_marginLeft="@dimen/phone_margin"
                        />
                <EditText
                        android:id="@+id/profile_etBirthday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/birthday_hint"
                        android:singleLine="true"
                        android:layout_below="@id/v2"
                        android:layout_alignLeft="@id/profile_etPhoneNo"
                        android:background="@color/NULL"
                        />
                <View
                        android:id="@+id/v3"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/phone_line_size"
                        android:layout_below="@id/profile_tvBirthday"
                        android:layout_margin="@dimen/phone_margin"
                        android:background="@color/Black"
                        />
                <TextView
                        android:id="@+id/profile_tvGender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_gender"
                        android:textStyle="bold"
                        android:textSize="@dimen/phone_text_size"
                        android:textColor="@color/Black"
                        android:layout_below="@id/v3"
                        android:layout_marginLeft="@dimen/phone_margin"
                        />
                <Button
                        android:id="@+id/profile_btMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/profile_male"
                        android:layout_alignLeft="@id/profile_etFullName"
                        android:layout_below="@id/profile_etBirthday"
                        android:layout_marginTop="14dp"
                        />
                <Button
                        android:id="@+id/profile_btFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/profile_female_visible"
                        android:layout_toRightOf="@id/profile_btMale"
                        android:layout_alignTop="@id/profile_btMale"/>
                <View
                        android:id="@+id/v4"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/phone_line_size"
                        android:layout_below="@id/profile_tvGender"
                        android:layout_margin="@dimen/phone_margin"
                        android:background="@color/Black"
                        />
                <TextView
                        android:id="@+id/profile_tvCountry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_country"
                        android:textStyle="bold"
                        android:textSize="@dimen/phone_text_size"
                        android:textColor="@color/Black"
                        android:layout_below="@id/v4"
                        android:layout_marginLeft="@dimen/phone_margin"
                        />
                <Button
                        android:id="@+id/profile_btArrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/profile_arrows"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/phone_margin"
                        android:layout_alignTop="@id/profile_tvCountry"/>

                <EditText
                        android:id="@+id/profile_etCountry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/country_hint"
                        android:singleLine="true"
                        android:layout_below="@id/v4"
                        android:layout_alignLeft="@id/profile_etPhoneNo"
                        android:layout_toLeftOf="@id/profile_btArrow"
                        android:background="@color/NULL"
                        />

            </RelativeLayout>
            <TextView
                    android:id="@+id/profile_tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textStyle="bold"
                    android:textSize="@dimen/phone_text_size"
                    android:textColor="@color/Black"
                    android:layout_below="@id/profile_rlAccountInfor"
                    android:layout_marginLeft="@dimen/phone_margin"/>
            <RelativeLayout
                    android:id="@+id/profile_rlDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profile_tvDescription"
                    android:layout_margin="@dimen/phone_margin"
                    android:background="@drawable/profile_description">
                <EditText
                        android:id="@+id/profile_etDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description_hint"
                        android:layout_below="@id/profile_tvDescription"
                        android:layout_margin="@dimen/phone_margin"
                        android:background="@color/NULL"
                        />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>